# silhouette-extract

./: .gitignore  README.md  requirements.txt  setup.cfg
scripts/: add_accum_channel.py
src/silhouettefile/: __init__.py
