[metadata]
name = silhouettefile
description = Silhouette file
author = Helio Tejedor
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    silhouettefile
install_requires =
    numpy>=1.21
    pandas>=1.3
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[flake8]
max-line-length = 160